--- a/StLouisRestaurantGuide/StLouisRestaurantGuide.csproj
+++ b/StLouisRestaurantGuide/StLouisRestaurantGuide.csproj
@@ -10,8 +10,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="ViewModels\Restaurants\" />
+    <Folder Include="ViewModels\RestaurantReviews\" />
   </ItemGroup>
 
 </Project>
